# llmbuster

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  llmbuster.spec  openrouter.yaml  pyproject.toml  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  cli.md  development.md  index.md  install.md  metrics.md  payloads.md  profiles.md  quickstart.md  tui.md
llmbuster/: cli.py  repeater.py  report.py  selftest.py  utils.py
llmbuster/detector/: __init__.py  heuristic.py  judge.py  registry.py
llmbuster/domain/: __init__.py  models.py  protocols.py
llmbuster/orchestrator/: __init__.py  aggregation.py  scan.py  summary.py
llmbuster/payload/: __init__.py  bundled.py  loader.py  mutation.py
llmbuster/resources/: openrouter.yaml
tests/: conftest.py  mock_server.py  test_aggregation.py  test_bundled_packs.py  test_chat_history.py  test_cli_mask.py  test_command.py  test_detectors.py  test_docker_build.py  test_domain.py  test_escalation.py  test_factory.py  test_interpolation.py  test_judge.py  test_mock_server.py  test_mutation.py  test_openrouter.py  test_orchestrator.py  test_packaging.py  test_payload_loader.py  test_plugin.py  test_profile_target.py  test_repeater.py  test_report.py  test_selftest.py  test_smoke.py  test_sqlite_store.py  test_summary.py  test_targets_cli.py  test_tui_app.py  test_tui_config_screen.py  test_tui_dashboard_screen.py  test_tui_findings_screen.py  test_tui_history_screen.py  test_writer.py
(+26 files in other folders)
